Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 11.0.0
-
None
-
-
730224581 (master), c82186ece (master)
Description
JOM takes an age to start dependency checking. I've added a couple of commits in a pull request on github to solve this:
https://github.com/qt-labs/jom/pull/1
This is seen with Ghostscript. Fixing these is NOT enough to make Ghostscript work, but it gets us much closer.
I'm not sure if github PRs are actively tracked, so thought it best to mention it here.
Attachments
Issue Links
- duplicates
-
QTCREATORBUG-23326 Jom 1.1.3 hangs
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29412 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495282,2 | Speed up preselectInferenceRules | master | qt-labs/jom | Status: MERGED | +2 | 0 |
495283,3 | Speed up cycle checking | master | qt-labs/jom | Status: MERGED | +2 | 0 |